# VaravuSelavuSeyali

./: .dockerignore  .gitignore  ALTERNATIVE_PRIVACY_ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  Dockerfile  FEASIBILITY_STUDY.md  Home.py  MOBILE_APP_ROADMAP.md  Makefile  README.md  __init__.py  backfill_merchants.py  cloudbuild.yaml  docker-compose.yml  google_sheet_utils.py  privacy_policy.html  requirements.txt  terms_of_service.html  varavu_selavu_seyali.py
varavu_selavu_app/: .dockerignore  Dockerfile  README.md  main.py  patch_analysis.py  patch_group_leg.py  pyproject.toml  run_e2e_pg_tests.sh  test_agent_history.py  test_analysis.py  test_chat_service.py  test_debug.py
varavu_selavu_app/alembic/: env.py
varavu_selavu_app/alembic/versions/: 0f0766accf80_baseline_schema.py  1e2c54195f60_add_payment_handles_to_users.py  66285244529e_groups_phase_3.py  b221e1af9b3d_add_expense_item_splits.py  bb6805ddfcad_add_address_to_users.py  c0cf6118cdec_insights_canonical_fk_columns.py  c5c9d0accc5a_entity_resolution_canonical_tables.py  d5f5cfe66abe_expense_merchant_id_uuid.py  efa7d37ee59c_add_recurring_groups.py  (+4 more)
varavu_selavu_app/scripts/: backfill_entity_resolution.py  reconcile_entity_resolution.py
varavu_selavu_app/tests/: conftest.py  test_account_deletion.py  test_analysis_e2e.py  test_analytics_api.py  test_analytics_e2e_pg.py  test_auth.py  test_backfill_entity_resolution.py  test_balances.py  test_balances_payment_handles.py  test_categorization.py  test_change_insights_group_aware.py  test_chat_create_expense_tools.py  test_chat_period_scope_resolution.py  test_chat_service.py  test_config_endpoint.py  test_devices_api.py  test_entity_resolution_api.py  test_entity_resolution_service.py  test_expense_comments.py  test_expense_group_conversion.py  test_expense_history.py  test_expenses_api.py  test_friend_balances.py  test_group_activity.py  test_group_expenses_api.py  test_group_export.py  test_groups_api.py  test_groups_e2e.py  test_groups_e2e_pg.py  test_groups_schema.py  test_insight_analytics_service.py  test_insights_aggregation_service.py  test_item_split_engine.py  test_merchant_insights.py  test_multi_currency.py  test_notification_preferences.py  test_notifications.py  test_payment_handles.py  test_receipt_ingestion.py  test_reconcile_entity_resolution.py  (+5 more)
varavu_selavu_app/varavu_selavu_service/: .env.example  main.py
(+470 files in other folders)
