[project]
name = "varavu-selavu-app"
version = "0.1.0"
description = "FastAPI backend for Varavu Selavu"
authors = [
    {name = "Rajesh Kumar Ganesan"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "varavu_selavu_service" }
]
package-mode = false
