[project]
name = "varavu-selavu-app"
version = "0.1.0"
description = "FastAPI backend for TrackSpense by Cereberoos"
authors = [
    {name = "Rajesh Kumar Ganesan"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "bcrypt (>=4.1.2,<5.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytest (<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "google-auth (>=2.49.0,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "varavu_selavu_service" }
]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest-env = "<1.0.0"
testing-postgresql = "^1.3.0"
psycopg2-binary = "^2.9.11"

